--- a/TestHW1/TestHW1.csproj
+++ b/TestHW1/TestHW1.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HW1\HW1.csproj" />
+    <ProjectReference Include="..\ClassLibraryHW1\ClassLibraryHW1.csproj" />
   </ItemGroup>
 
 </Project>
